# sydney

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
lib/include/sydney/: awaitable_future.h  coroutine.h  local_scheduler.h  pollable.h  scheduler.h  sydney.h  thread_pool.h
lib/src/: local_scheduler.cpp  pollable.cpp  scheduler.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test_local_scheduler.cpp  test_manual_coroutine.cpp  test_recursive_coroutine.cpp  test_spawn_blocking.cpp  test_task_switching.cpp  test_thread_pool.cpp
